# network-monitor

./: .gitignore  CMakeLists.txt  LEARNING_GUIDE.md  README.md  USAGE.md  test_capture.sh
.github/: copilot-instructions.md
include/: NetworkMonitor.h  PacketCapture.h  PortScanner.h  TrafficAnalyzer.h  Utils.h
src/: NetworkMonitor.cpp  PacketCapture.cpp  PortScanner.cpp  TrafficAnalyzer.cpp  Utils.cpp  main.cpp
